<resources>
    <string name="app_name">植物说</string>
    <string name="from">from</string>
    <string name="btn">转换为华氏温度</string>
    <string name="newT">结果为：</string>
    <string name="hb">happy birthday</string>
    <string name="teamName">TeamA</string>
    <string name="score">0</string>
    <string name="btn1">+1分</string>
    <string name="btn2">+2分</string>
    <string name="btn3">+3分</string>
    <string name="reset">reset</string>
    <string name="action_settings" translatable="false">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>
    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="editText_rate" translatable="false">输入金额</string>
    <string name="rate_show" translatable="false">转换后的金额为：</string>
    <string name="rate_dollar" translatable="false">美元</string>
    <string name="rate_won" translatable="false">韩元</string>
    <string name="rate_euro" translatable="false">欧元</string>
    <string name="btn_opencfg" translatable="false">Config</string>
    <string name="btn_save_label" translatable="false">save</string>
    <string name="dollar_rate" translatable="false">dollar_rate</string>
    <string name="euro_rate" translatable="false">euro_rate</string>
    <string name="won_rate" translatable="false">won_rate</string>
    <string name="item" translatable="false">Item</string>
    <string name="label_open_list" translatable="false">OpenList</string>
    <string name="keywords" translatable="false">输入关键字</string>
    <string name="result" translatable="false">搜索结果</string>
    <string name="search" translatable="false">search</string>
    <string name="home_btn1" translatable="false">常见植物介绍</string>
    <string name="home_btn2" translatable="false">科学知识</string>
    <string name="home_btn3" translatable="false">养护记录</string>
    <string name="plant_des_back" translatable="false">返回</string>
    <string name="plant_menu_grid" translatable="false">GridView视图</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="record_title" translatable="false">养护记录</string>
    <string name="record_btn_add" translatable="false">增加</string>
    <string name="record_name" translatable="false">养护记录</string>
</resources>
