<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RateActivity"
    android:orientation="vertical">


    <EditText
        android:id="@+id/inpMoney"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/editText_rate"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:textSize="25sp"
        android:autofillHints="" />

    <TextView
        android:id="@+id/showMoney"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:text="@string/rate_show"
        android:textSize="35sp" />

    <Button
        android:id="@+id/btn_dollar"
        android:onClick="onclick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:text="@string/rate_dollar" />

    <Button
        android:id="@+id/btn_euro"
        android:onClick="onclick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:text="@string/rate_euro"/>

    <Button
        android:id="@+id/btn_won"
        android:onClick="onclick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:text="@string/rate_won"/>

    <Button
        android:id="@+id/btn_intent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_intent"
        android:onClick="openOne"/>

</LinearLayout>