<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.androidclass.plant_home.HomeActivity"
    android:padding="20dp"
    android:background="@mipmap/home1"
    android:orientation="vertical">

    <Button
        android:id="@+id/home_btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:background="@color/design_default_color_secondary_variant"
        android:text="@string/home_btn1"
        android:textColor="@color/design_default_color_background"
        android:textSize="30sp"
        android:onClick="onClick_home"/>

    <Button
        android:id="@+id/home_btn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/design_default_color_secondary_variant"
        android:onClick="onClick_home"
        android:text="@string/home_btn2"
        android:textColor="@color/design_default_color_background"
        android:textSize="30sp"
        tools:text="@string/home_btn22" />

    <Button
        android:id="@+id/home_btn3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/design_default_color_secondary_variant"
        android:onClick="onClick_home"
        android:text="@string/home_btn3"
        android:textColor="@color/design_default_color_background"
        android:textSize="30sp" />


</LinearLayout>